--- a/conv.ipynb
+++ b/conv.ipynb
@@ -6,7 +6,7 @@
       "name": "conv.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORCti2sbIZqQeGA1RGtiur",
+      "authorship_tag": "ABX9TyM2Nj19NdvSgvr54lVkJWro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,24 +45,26 @@
         "import torch.nn as nn\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
+        "from torchvision.transforms.transforms import ToTensor\n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from skimage import io\n",
         "import os\n",
+        "from tqdm import tqdm\n",
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
       ],
       "metadata": {
         "id": "FsNDWXzxVtru"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Loading"
+        "# Data Preprocessing"
       ],
       "metadata": {
         "id": "cGwtTZoyAYSu"
@@ -73,44 +75,219 @@
       "source": [
         "class SpeedsAndFramesDataset(Dataset):\n",
         "  def __init__(self, csv_file, root_dir, transform=None):\n",
-        "    self.annotations = pd.read_csv(csv_file)\n",
-        "    self.root_dir = root_dir\n",
-        "    self.transform = transform\n",
+        "      self.csv_data = pd.read_csv(csv_file)\n",
+        "      self.root_dir = root_dir\n",
+        "      self.transform = transform\n",
         "\n",
         "  def __len__(self):\n",
-        "    return len(self.annotations)\n",
+        "      return len(self.csv_data)\n",
         "\n",
-        "  def __getitem__(self,index):\n",
-        "    img_path = os.path.join(self.root_dir, self.annotations.iloc[index, 0])\n",
-        "    image = io.imread(img_path)\n",
-        "    y_label = torch.tensor(int(self.annotations.iloc[index, 1]))\n",
+        "  def __getitem__(self, index):\n",
+        "      img_path = os.path.join(self.root_dir, self.csv_data.iloc[index, 0])\n",
+        "      image = io.imread(img_path)\n",
+        "      y_label = torch.tensor(int(self.csv_data.iloc[index, 2])/10)\n",
         "\n",
-        "    if self.transform:\n",
-        "      image = self.tranform(image)\n",
+        "      if self.transform:\n",
+        "          image = self.transform(image)\n",
         "\n",
-        "    return (image, y_label)"
+        "      return (image, y_label)"
       ],
       "metadata": {
         "id": "bwBeppDA8jAj"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from torchvision.transforms.transforms import ToTensor\n",
         "dataset = SpeedsAndFramesDataset(\n",
-        "    csv_file='speedsAndFrames.csv',\n",
+        "    csv_file='data.csv',\n",
         "    root_dir=\"trainingData\",\n",
-        "    transform=ToTensor(),\n",
+        "    transform=transforms.ToTensor(),\n",
         ")"
       ],
       "metadata": {
         "id": "ew8bosgoCx9v"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = []\n",
+        "targets = []\n",
+        "for i in range(len(dataset)-10):\n",
+        "  pixels = []\n",
+        "  speeds = []\n",
+        "  for j in range(10):\n",
+        "    pixels.append(dataset[i+j][0])\n",
+        "    speeds.append(dataset[i+j][1])\n",
+        "  inputs.append(pixels)\n",
+        "  targets.append(speeds)"
+      ],
+      "metadata": {
+        "id": "9LDtq-jIv92m"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hyperparameters"
+      ],
+      "metadata": {
+        "id": "m44wtPG3_3fA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_size = 64\n",
+        "hidden_size = 256\n",
+        "num_layers = 2\n",
+        "num_classes = 11\n",
+        "sequence_length = 10\n",
+        "batch_size = len(inputs)\n",
+        "learning_rate = 0.005\n",
+        "num_epochs = 1"
+      ],
+      "metadata": {
+        "id": "G9QShq4W_9n5"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model"
+      ],
+      "metadata": {
+        "id": "5Z1NzJ-t6pMD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class RNN(nn.Module):\n",
+        "    def __init__(self, input_size, hidden_size, num_layers, num_classes):\n",
+        "        super(RNN, self).__init__()\n",
+        "        self.hidden_size = hidden_size\n",
+        "        self.num_layers = num_layers\n",
+        "        self.rnn = nn.RNN(input_size, hidden_size, num_layers, batch_first=True)\n",
+        "        self.fc = nn.Linear(hidden_size * sequence_length, num_classes)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        h0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size).to(device)\n",
+        "\n",
+        "        out, _ = self.rnn(x, h0)\n",
+        "        out = out.reshape(out.shape[0], -1)\n",
+        "\n",
+        "        out = self.fc(out)\n",
+        "        return out"
+      ],
+      "metadata": {
+        "id": "lbve28rG6t5d"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Define model"
+      ],
+      "metadata": {
+        "id": "WxF-VkQnAsPz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = RNN(input_size, hidden_size, num_layers, num_classes).to(device)"
+      ],
+      "metadata": {
+        "id": "kIScUMslA0CI"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Loss and Optimizer"
+      ],
+      "metadata": {
+        "id": "lNwvWsdW6yTM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
+      ],
+      "metadata": {
+        "id": "1rwNKus8A47A"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Training Network"
+      ],
+      "metadata": {
+        "id": "4NPxEj3hA8Kw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for epoch in range(num_epochs):\n",
+        "  for elem in train_loader:\n",
+        "      # Get data to cuda if possible\n",
+        "      data = data.to(device=device).squeeze(1)\n",
+        "      targets = targets.to(device=device)\n",
+        "\n",
+        "      # forward\n",
+        "      scores = model(data)\n",
+        "      targets = targets.type(torch.LongTensor)\n",
+        "      loss = criterion(scores, targets)\n",
+        "\n",
+        "      # backward\n",
+        "      optimizer.zero_grad()\n",
+        "      loss.backward()\n",
+        "\n",
+        "      # gradient descent update step/adam step\n",
+        "      optimizer.step()"
+      ],
+      "metadata": {
+        "id": "SdPiA8o7BBLp",
+        "outputId": "437098a4-314b-407b-f583-79630db7901a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-61-81e3769ef615>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0melem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m       \u001b[0;31m# Get data to cuda if possible\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m       \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m       \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
