--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -6,7 +6,7 @@
       "name": "rnn.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOZdeITBhFuq1et3yuGHOO",
+      "authorship_tag": "ABX9TyMJmBrRzat957sulYVLlbOW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "dUpCWMLRrzl3"
       },
-      "execution_count": 15,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oVfre1Uar_Nx",
-        "outputId": "2385e8fc-1bca-42bf-d82f-fcdf0d9adebb"
+        "outputId": "90033597-4105-432a-d7c9-a91b697df5f3"
       },
-      "execution_count": 49,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "b5-mX8wssEfL"
       },
-      "execution_count": 57,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "    def __getitem__(self, idx):\n",
         "        img_path = os.path.join(self.img_dir, self.img_labels.iloc[idx, 0])\n",
         "        image = read_image(img_path) / 255\n",
-        "        label = self.img_labels.iloc[idx, 1]\n",
+        "        label = self.img_labels.iloc[idx, 1] / 10\n",
         "        if self.transform:\n",
         "            image = self.transform(image)\n",
         "        if self.target_transform:\n",
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "IxbHORRrsLUX"
       },
-      "execution_count": 43,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "Z3kjLWk3sOZt"
       },
-      "execution_count": 45,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "jwSVz3USsPXz"
       },
-      "execution_count": 59,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "rw0QegPjsRE2"
       },
-      "execution_count": 60,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -176,12 +176,10 @@
       "source": [
         "n_total_steps = len(train_loader)\n",
         "for epoch in range(num_epochs):\n",
-        "    for i, (images, labels) in enumerate(train_loader):  \n",
-        "        # origin shape: [N, 1, 28, 28]\n",
-        "        # resized: [N, 28, 28]\n",
+        "    for i, (images, labels) in enumerate(train_loader):\n",
         "        images = images.reshape(-1, sequence_length, input_size).to(device)\n",
         "        labels = labels.to(device)\n",
-        "        \n",
+        "        labels = labels.type(torch.LongTensor)\n",
         "        # Forward pass\n",
         "        outputs = model(images)\n",
         "        loss = criterion(outputs, labels)\n",
@@ -191,58 +189,49 @@
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "        \n",
-        "        if (i+1) % 100 == 0:\n",
+        "        if (i+1) % 10 == 0:\n",
         "            print (f'Epoch [{epoch+1}/{num_epochs}], Step [{i+1}/{n_total_steps}], Loss: {loss.item():.4f}')"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 409
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7T2fapl-sUXb",
-        "outputId": "caefe27b-a90a-4eea-bff5-9a3f29e60a6b"
+        "outputId": "d2b04261-c764-4527-dcfe-67109c9fad6d"
       },
-      "execution_count": 61,
+      "execution_count": 83,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-61-7349f8d6ccb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;31m# Forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# Backward and optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1100\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1101\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1102\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1103\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1104\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m   1150\u001b[0m         return F.cross_entropy(input, target, weight=self.weight,\n\u001b[1;32m   1151\u001b[0m                                \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1152\u001b[0;31m                                label_smoothing=self.label_smoothing)\n\u001b[0m\u001b[1;32m   1153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1154\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   2844\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msize_average\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mreduce\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2845\u001b[0m         \u001b[0mreduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_get_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize_average\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2846\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_smoothing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2847\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2848\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: Target 20 is out of bounds."
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/2], Step [10/126], Loss: 0.0248\n",
+            "Epoch [1/2], Step [20/126], Loss: 3.6469\n",
+            "Epoch [1/2], Step [30/126], Loss: 2.2203\n",
+            "Epoch [1/2], Step [40/126], Loss: 1.3762\n",
+            "Epoch [1/2], Step [50/126], Loss: 3.7078\n",
+            "Epoch [1/2], Step [60/126], Loss: 2.8431\n",
+            "Epoch [1/2], Step [70/126], Loss: 4.1841\n",
+            "Epoch [1/2], Step [80/126], Loss: 0.3217\n",
+            "Epoch [1/2], Step [90/126], Loss: 0.6142\n",
+            "Epoch [1/2], Step [100/126], Loss: 2.0337\n",
+            "Epoch [1/2], Step [110/126], Loss: 2.7226\n",
+            "Epoch [1/2], Step [120/126], Loss: 3.8848\n",
+            "Epoch [2/2], Step [10/126], Loss: 2.2314\n",
+            "Epoch [2/2], Step [20/126], Loss: 3.1222\n",
+            "Epoch [2/2], Step [30/126], Loss: 3.6302\n",
+            "Epoch [2/2], Step [40/126], Loss: 3.8602\n",
+            "Epoch [2/2], Step [50/126], Loss: 4.9388\n",
+            "Epoch [2/2], Step [60/126], Loss: 2.5483\n",
+            "Epoch [2/2], Step [70/126], Loss: 3.4451\n",
+            "Epoch [2/2], Step [80/126], Loss: 0.4617\n",
+            "Epoch [2/2], Step [90/126], Loss: 2.3113\n",
+            "Epoch [2/2], Step [100/126], Loss: 2.2745\n",
+            "Epoch [2/2], Step [110/126], Loss: 3.8612\n",
+            "Epoch [2/2], Step [120/126], Loss: 4.1170\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with torch.no_grad():\n",
-        "    n_correct = 0\n",
-        "    n_samples = 0\n",
-        "    for images, labels in test_loader:\n",
-        "        images = images.reshape(-1, sequence_length, input_size).to(device)\n",
-        "        labels = labels.to(device)\n",
-        "        outputs = model(images)\n",
-        "        # max returns (value ,index)\n",
-        "        _, predicted = torch.max(outputs.data, 1)\n",
-        "        n_samples += labels.size(0)\n",
-        "        n_correct += (predicted == labels).sum().item()\n",
-        "\n",
-        "    acc = 100.0 * n_correct / n_samples\n",
-        "    print(f'Accuracy of the network on the 10000 test images: {acc} %')"
-      ],
-      "metadata": {
-        "id": "HUwip4XgsW4J"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
